==> georgech/uTaker/Hardware/LPC17XX/LPC17XX_boot.c <==
    #include "config.h"
    #include "..\..\WinSim\WinSim.h"
    #define INITHW  extern
    #define __interrupt__
    #define SIM_LOCK MCF_CLOCK_SYNSR |= PLLOCKED;
    #define _LITTLE_ENDIAN
    #define SIM_DMA_3 fnSimDMA(0);
    #define START_CODE 0
    #define OPSYS_CONFIG                                                 // this module owns the operating system configuration
    #define INITHW  static
    #define SIM_LOCK
    #define SIM_DMA_3
    #define _SIM_PORT_CHANGE
        #define __interrupt__
    #include "config.h"
        #define START_CODE __main
        #define START_CODE  _LowLevelInit
        #define START_CODE  _LowLevelInit
        #define asm(x) __asm__(x)
        #define SPI_FLASH_DEVICE_COUNT 1
        #define EXTENDED_CS , &iChipSelect
        #define _EXTENDED_CS  iChipSelect,
        #define EXTENDED_CS
        #define _EXTENDED_CS
            #define SPI_FLASH_ATMEL                                      // default if not otherwise defined
        #define _SPI_DEFINES
            #include "spi_flash_lpc_atmel.h"
            #include "spi_flash_lpc_stmicro.h"
            #include "spi_flash_lpc_sst25.h"

extern int fnConfigSPIFileSystem(void)
{
    POWER_UP(PCSSP_X);                                                   // power up the SSP used
    CONFIGURE_SPI_PINS();
    CONFIGURE_CS_LINES();

    SSPCR1_X = 0;                                                        // ensure disabled (master mode)
    SSPCPSR_X = 2;                                                       // set clock prescaler (even prescale 2..254)

    SSPCR0_X = (FRS_FREESCALE_SPI | DSS_8_BIT | ((((SSP_CLOCK/2 + 2000000/2)/2000000) - 1) << SSP_SCR_SHIFT)); // set 2MHz frequency and mode
    SSPCR1_X = SSP_SSE;                                                  // enable
    #define _CHECK_SPI_CHIPS                                             // insert manufacturer dependent code
    #include "spi_flash_lpc_atmel.h"                                     // check the chip availablility
    #include "spi_flash_lpc_stmicro.h"
    #include "spi_flash_lpc_sst25.h"
    #undef _CHECK_SPI_CHIPS

    if (ucSPI_FLASH_Type[0] == NO_SPI_FLASH_AVAILABLE) {
        return 1;
    }
    return 0;

}

extern void fnResetBoard(void)
{
    WDMOD  = (WDEN | WDRESET);                                           // ensure watchdog is enabled
    WDFEED = 0xaa;                                                       // command reset to core and peripherals
    WDFEED = 0x55;
    WDFEED = 0xaa;
    WDFEED = 0;                                                          // bad feed sequence causes immediate reset
#ifdef _WINDOWS
    WDTV   = 0;
#endif
}

extern int fnWriteBytesFlash(unsigned char *ucDestination, unsigned char *ucData, MAX_FILE_LENGTH Length)
{
    static unsigned char *ptrOpenBuffer = 0;
    unsigned long ulBufferOffset = ((CAST_POINTER_ARITHMETIC)ucDestination & (FLASH_ROW_SIZE-1));
    unsigned char *ptrFlashBuffer;
    MAX_FILE_LENGTH BufferCopyLength;

    #if defined SPI_SW_UPLOAD
    if (ucDestination >= ((unsigned char *)(SPI_FLASH_START))) {         // we are working from external SPI FLASH memory
        #ifdef SPI_FLASH_MULTIPLE_CHIPS
        int iChipSelect;
        #endif
        unsigned short usPageNumber;
        unsigned short usPageOffset;
        unsigned short usDataLength;
        #ifdef FLASH_LINE_SIZE
        if (ucData == 0) {                                               // ignore command to close an open line buffer (compatibility with internal FLASH)
            return 0;
        }
        #endif
        usPageNumber = fnGetSPI_FLASH_location(ucDestination, &usPageOffset EXTENDED_CS);
        while (Length != 0) {
            usDataLength = (unsigned short)Length;
        #ifdef SPI_FLASH_ST
            if (usDataLength > (SPI_FLASH_PAGE_LENGTH - usPageOffset)) {
                usDataLength = (SPI_FLASH_PAGE_LENGTH - usPageOffset);
            }
            fnSPI_command(WRITE_ENABLE, 0, _EXTENDED_CS 0, 0);        // write enable
            fnSPI_command(PAGE_PROG, (usPageNumber<<8) | usPageOffset, _EXTENDED_CS ucData, usDataLength);// copy new content
            Length -= usDataLength;
            ucData += usDataLength;
            usPageNumber++;
            usPageOffset = 0;
        #else
            if ((usPageOffset != 0) || (Length < SPI_FLASH_PAGE_LENGTH)) { // are we writing a partial page?
                fnSPI_command(MAIN_TO_BUFFER_1, usPageNumber, _EXTENDED_CS 0, 0); // copy main memory to buffer
            }
            if (usDataLength > (SPI_FLASH_PAGE_LENGTH - usPageOffset)) {
                usDataLength = (SPI_FLASH_PAGE_LENGTH - usPageOffset);
            }
            fnSPI_command(WRITE_BUFFER_1, usPageOffset, _EXTENDED_CS ucData, usDataLength);// copy new content
            fnSPI_command(PROG_FROM_BUFFER_1, usPageNumber, _EXTENDED_CS 0, 0); // program to main memory
            Length -= usDataLength;
            ucData += usDataLength;
            usPageNumber++;
            usPageOffset = 0;
        #endif
        }
        return 0;
    }
    #endif

    if (ucData == 0) {                                                   // close an open buffer
        ucDestination = ptrOpenBuffer;
        ulBufferOffset = FLASH_ROW_SIZE;
    }
    else {
        ptrOpenBuffer = (unsigned char *)((CAST_POINTER_ARITHMETIC)ucDestination & ~(FLASH_ROW_SIZE-1));
    }
    do {
        BufferCopyLength = (FLASH_ROW_SIZE - ulBufferOffset);            // remaining buffer space to end of present backup buffer
        if (BufferCopyLength > Length) {
            BufferCopyLength = Length;
        }
        ptrFlashBuffer = ucFlashRow + ulBufferOffset;                    // pointer set in FLASH row backup buffer
        uMemcpy(ptrFlashBuffer, ucData, BufferCopyLength);               // copy the input data to the FLASH row backup buffer
        ucData += BufferCopyLength;
        Length -= BufferCopyLength;                                      // remaining data length
        ptrFlashBuffer += BufferCopyLength;                              // next copy location
        if (ptrFlashBuffer >= (ucFlashRow + FLASH_ROW_SIZE)) {           // a complete backup buffer is ready to be copied to FLASH
            fnFlashCommand(WRITE_FLASH_BUFFER, ptrOpenBuffer, 0);        // perform the write command
            uMemset(ucFlashRow, 0xff, FLASH_ROW_SIZE);                   // flush ready for next buffer use
            ptrFlashBuffer = ucFlashRow;                                 // set pointer to start of FLASH row backup buffer
            ulBufferOffset = 0;
            ptrOpenBuffer += FLASH_ROW_SIZE;
        }
    } while (Length != 0);
    return 0;
}

extern int fnEraseFlashSector(unsigned char *ptrSector, MAX_FILE_LENGTH Length)
{
#if defined FLASH_FILE_SYSTEM
    unsigned long ulPage = ((CAST_POINTER_ARITHMETIC)ptrSector & ~(FLASH_GRANULARITY-1)); // ensure page boundary
    ulPage -= FLASH_START_ADDRESS;
#endif
#ifdef PROTECTED_FILE
    int iUnprotected = 0;                                                // device presently protected
#endif
    do {
        #if defined SPI_SW_UPLOAD
        if (ptrSector >= ((unsigned char *)(SPI_FLASH_START))) {         // we are working from external SPI FLASH memory
            #ifdef SPI_FLASH_MULTIPLE_CHIPS                              // delete in SPI FLASH
            int iChipSelect;
            #endif
            unsigned short usPageNumber, usPageOffset;
            #ifndef SPI_FLASH_ST
            unsigned short usLength;
            unsigned char  ucCommand;
            #endif
            usPageNumber = fnGetSPI_FLASH_location(ptrSector, &usPageOffset EXTENDED_CS);
            Length += usPageOffset;                                      // length with respect to start of present page
            ptrSector -= usPageOffset;                                   // set pointer to start of present page

            #ifdef SPI_FLASH_ST
            fnSPI_command(WRITE_ENABLE, 0, _EXTENDED_CS 0, 0);           // enable the write
                #ifdef SPI_DATA_FLASH
            fnSPI_command(SUB_SECTOR_ERASE, ((unsigned long)usPageNumber<<8), _EXTENDED_CS 0, 0); // delete appropriate sub-sector
                #else
            fnSPI_command(SECTOR_ERASE, ((unsigned long)usPageNumber<<8), _EXTENDED_CS 0, 0); // delete appropriate sector
                #endif
            if (Length <= SPI_FLASH_SECTOR_LENGTH) {
                break;                                                   // delete complete
            }
            ptrSector += SPI_FLASH_SECTOR_LENGTH;
            Length -= SPI_FLASH_SECTOR_LENGTH;
            #else
            if ((Length >= SPI_FLASH_BLOCK_LENGTH) && (usPageNumber%8 == 0)) { // if delete range corresponds to a block, use faster block delete
                usLength = SPI_FLASH_BLOCK_LENGTH;
                ucCommand = BLOCK_ERASE;
            }
            else {
                usLength = SPI_FLASH_PAGE_LENGTH;
                ucCommand = PAGE_ERASE;
            }
            fnSPI_command(ucCommand, usPageNumber, _EXTENDED_CS 0, 0);   // delete appropriate page/block
            if (Length <= usLength) {
                break;                                                   // delete complete
            }
            ptrSector += usLength;
            Length -= usLength;
            #endif
            continue;
        }
        #endif
        #ifdef FLASH_FILE_SYSTEM
        fnFlashCommand(DELETE_FLASH, ptrSector, Length);
        break;
        #endif
    } while (Length);

#ifdef PROTECTED_FILE
    if (iUnprotected != 0) {                                             // protect device again on exit
    }
#endif
    return 0;
}

INITHW void fnInitHW(void)                                               //perform hardware initialisation
{

#ifdef _WINDOWS
    #define PORTA_DEFAULT_INPUT        0xffffffff
    #define PORTB_DEFAULT_INPUT        0xffffffff

    unsigned long ulPortPullups[] = {
        PORTA_DEFAULT_INPUT,                                             // set the port states out of reset in the project file app_hw_sam7x.h
        PORTB_DEFAULT_INPUT
    };

    fnInitialiseDevice((void *)ulPortPullups);
    _LowLevelInit();
#endif

#ifdef _WINDOWS
    fnSimPorts();                                                        // ensure port states are recognised
#endif
}
